@@ -6,6 +6,7 @@ import briefing.member.application.MemberQueryService;
 import briefing.member.application.dto.MemberRequest;
 import briefing.member.application.dto.MemberResponse;
 import briefing.member.domain.Member;
+import briefing.member.domain.MemberRole;
 import briefing.member.domain.SocialType;
 import briefing.redis.domain.RefreshToken;
 import briefing.redis.service.RedisService;
@@ -15,6 +16,10 @@ import briefing.validation.annotation.CheckSameMember;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.Parameter;
 import io.swagger.v3.oas.annotations.Parameters;
+import io.swagger.v3.oas.annotations.media.Content;
+import io.swagger.v3.oas.annotations.media.Schema;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
@@ -22,16 +27,17 @@ import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
 
-import java.sql.Ref;
 import java.util.Arrays;
 import java.util.List;
-import java.util.UUID;
 
 @Tag(name = "02-Member \uD83D\uDC64",description = "사용자 관련 API")
 @RestController
 @Validated
 @RequestMapping("/members")
 @RequiredArgsConstructor
+@ApiResponses({
+        @ApiResponse(responseCode = "COMMON000", description = "SERVER ERROR, 백앤드 개발자에게 알려주세요", content = @Content(schema = @Schema(implementation = CommonResponse.class))),
+})
 public class MemberApi {
     private final MemberQueryService memberQueryService;
     private final MemberCommandService memberCommandService;
@@ -57,24 +63,39 @@ public class MemberApi {
     ) {
         Member member = memberCommandService.login(socialType, request);
         // TODO - TokenProvider에서 발급해주도록 변경
-        String accessToken = tokenProvider.createAccessToken(member.getId(),member.getSocialType().toString() ,member.getSocialId(), Arrays.asList(new SimpleGrantedAuthority("USER")));
+        String accessToken = tokenProvider.createAccessToken(member.getId(),member.getSocialType().toString() ,member.getSocialId(), List.of(new SimpleGrantedAuthority(MemberRole.ROLE_USER.name())));
         String refreshToken = redisService.generateRefreshToken(member.getSocialId(),member.getSocialType()).getToken();
         return CommonResponse.onSuccess(MemberConverter.toLoginDTO(member, accessToken, refreshToken));
     }
 
+    @Operation(summary = "02-01 Member\uD83D\uDC64 accessToken 재발급 받기", description = "accessToken 만료 시 refreshToken으로 재발급을 받는 API 입니다.")
+    @ApiResponses({
+            @ApiResponse(responseCode = "1000",description = "OK, 성공"),
+            @ApiResponse(responseCode = "COMMON001", description = "request body에 담길 값이 이상함, result를 확인해주세요!",content = @Content(schema = @Schema(implementation = CommonResponse.class))),
+            @ApiResponse(responseCode = "AUTH005", description = "리프레시 토큰도 만료, 다시 로그인",content = @Content(schema = @Schema(implementation = CommonResponse.class))),
+            @ApiResponse(responseCode = "AUTH009", description = "리프레시 토큰 모양이 잘못 됨",content = @Content(schema = @Schema(implementation = CommonResponse.class))),
+    })
     @PostMapping("/auth/token")
     public CommonResponse<MemberResponse.ReIssueTokenDTO> reissueToken(@Valid @RequestBody MemberRequest.ReissueDTO request){
         RefreshToken refreshToken = redisService.reGenerateRefreshToken(request);
         Member parsedMember = memberCommandService.parseRefreshToken(refreshToken);
         String accessToken = tokenProvider.createAccessToken(parsedMember.getId(),parsedMember.getSocialType().toString(), parsedMember.getSocialId(), List.of(new SimpleGrantedAuthority(parsedMember.getRole().toString())));
-        return CommonResponse.onSuccess(MemberConverter.toReIssueTokenDTO(accessToken,refreshToken.getToken()));
+        return CommonResponse.onSuccess(MemberConverter.toReIssueTokenDTO(parsedMember.getId(), accessToken,refreshToken.getToken()));
     }
 
-
+    @Operation(summary = "02-01 Member\uD83D\uDC64 회원 탈퇴", description = "회원 탈퇴 API 입니다.")
     @DeleteMapping("/{memberId}")
     @Parameters({
             @Parameter(name = "member", hidden = true),
             @Parameter(name = "memberId", description = "삭제 대상 멤버아이디")
+    })
+    @ApiResponses({
+            @ApiResponse(responseCode = "1000",description = "OK, 성공"),
+            @ApiResponse(responseCode = "AUTH003", description = "access 토큰을 주세요!",content = @Content(schema = @Schema(implementation = CommonResponse.class))),
+            @ApiResponse(responseCode = "AUTH004", description = "acess 토큰 만료",content = @Content(schema = @Schema(implementation = CommonResponse.class))),
+            @ApiResponse(responseCode = "AUTH006", description = "acess 토큰 모양이 이상함",content = @Content(schema = @Schema(implementation = CommonResponse.class))),
+            @ApiResponse(responseCode = "MEMBER_001", description = "사용자가 존재하지 않습니다.",content = @Content(schema = @Schema(implementation = CommonResponse.class))),
+            @ApiResponse(responseCode = "MEMBER_002", description = "로그인 한 사용자와 탈퇴 대상이 동일하지 않습니다.",content = @Content(schema = @Schema(implementation = CommonResponse.class))),
     })
     public CommonResponse<MemberResponse.QuitDTO> quitMember(@AuthMember Member member, @CheckSameMember @PathVariable Long memberId){
         memberCommandService.deleteMember(memberId);
